<resources>
    <string name="app_name">Car Byke</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_while_loading_image">Error While loading image</string>
    <string name="rent_car_bike">RENT CAR / BIKE</string>
    <string name="car">CAR</string>
    <string name="bike">BIKE</string>
    <string name="search_for_cars">Search For Cars</string>
    <string name="search_for_bikes">Search For Bikes</string>
    <string name="select_your_starting_point">Select your starting point</string>
    <string name="choose_from">Choose from variety of unique cars for rent</string>
    <string name="choose_from_bikes">Choose from variety of unique bikes for rent</string>
    <string name="where">Where</string>
    <string name="from">From</string>
    <string name="pick_up">Pick up</string>
    <string name="drop_off">Drop off</string>
    <string name="until">Until</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_your_location">Select your location</string>
    <string name="search_pick_up">Search pick-up location</string>
    <string name="ok" />
    <string name="cont">CONTINUE</string>
    <string name="search_location_here">Search Location Here</string>
    <string name="search">Search</string>
    <string name="rs_300_extra_for_car_delivery_and_collection">Rs 300 extra for car delivery and collection</string>
    <string name="make_your_trip"><i>MAKE YOUR TRIP</i></string>
    <string name="login_or_sign_up">Login or Sign up</string>
    <string name="continue_with">Continue with</string>
    <string name="nineOne">+91</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="wrong_number">wrong number?</string>
    <string name="no_need_to_sign_up">No need to <b>Sign-up</b>. If you are new user then new account will be automatically created and you will be directly <b>Signed-in</b></string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">SAVE</string>
    <string name="gender">Gender</string>
    <string name="update"><b>UPDATE</b></string>
    <string name="skip">SKIP</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="profile_verification">Profile Verification</string>
    <string name="incomplete">Incomplete</string>
    <string name="status">status</string>
    <string name="driving_license">Driving License</string>
    <string name="aadhaar_card">Aadhaar Card</string>
    <string name="live_photo">Live Photo</string>
    <string name="upload_driving_license_image">Upload Driving License Image</string>
    <string name="upload_aadhar_card_image">Upload Aadhar Card Image</string>
    <string name="upload">UPLOAD</string>
    <string name="image_must_contain">Image must contain</string>
    <string name="license_guidelines">- Name, dob, license number, expiry date should be visible.\n
                                      - Complete house address should be visible.\n
                                      - Blurry image wil not be accepted.\n
                                      - License already registered with CarByke will not be accepted.</string>
    <string name="aadhar_guidelines">- Name, dob, license number, expiry date should be visible.\n
                                     - Complete house address should be visible.\n
                                     - Blurry image wil not be accepted.\n
                                     - Aadhar Number already registered with CarByke will not be accepted.</string>
    <string name="live_image_guidelines">- Choose camera and take live photo.\n
                                     - Face should be clearly visible.\n
                                     - Blurry image wil not be accepted.\n
                                     - Recently clicked image is also accepted but should not be too old one.</string>
    <string name="upload_live_face_image">Upload Live face Image</string>
    <string name="submit_to_verify">SUBMIT TO VERIFY</string>
    <string name="start_date">start date</string>
    <string name="filter">filter</string>
    <string name="price">Price</string>
    <string name="_100_kms_free">100 kms free</string>
    <string name="_200_kms_free">200 kms free</string>
    <string name="_350_kms_free">350 kms free</string>
    <string name="distance">distance</string>
    <string name="pick_up_place_name">Pick up place name</string>
    <string name="profile_approved">Profile Approved</string>
    <string name="station_location">Station Location</string>
    <string name="car_details">CAR DETAILS</string>
    <string name="other_details">Other Details</string>
    <string name="helmet">Helmet</string>
    <string name="insurance">Insurance</string>
    <string name="registration_certificate">Registration Certificate</string>
    <string name="pollution">Pollution</string>
    <string name="knee_elbow_caps_hand_gloves">Knee/ Elbow Caps/ Hand Gloves</string>
    <string name="accessories">Accessories</string>
    <string name="starting_kilometers">Starting Kilometers</string>
    <string name="kilometers">Kilometers</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="car_name">car name</string>

</resources>
